Changes made in the previous observation from 'low' to 'long' waiting days

--- a/Investigate_a_Dataset_by_Aderinsola_resubmission1.ipynb
+++ b/Investigate_a_Dataset_by_Aderinsola_resubmission1.ipynb
@@ -3253,7 +3253,7 @@
     " * From the scheduled time column most meetings that results in appointments occur early in the morning.\n",
     " * Meetings could be as early as 6am and as late as 9pm.\n",
     " * On average waiting days are kept short.\n",
-    " * More data like reasons for appointments might have given more insights to why we would have really low waiting days.\n",
+    " * More data like reasons for appointments might have given more insights to why we would have really long waiting days.\n",
     " * The age standard deviation and mean of the age column imply it is not a normal distribution. \n",
     " * Very few patients are on scholarship.\n",
     " * Also not a portion of the appointments have patients with the mentioned health conditionns."
